# codeowners

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
src/: git.rs  lib.rs  main.rs  owners.rs
tests/: cli.rs  explain_owners.rs  get_diff.rs  get_owners.rs  lib_diff.rs  lib_explain.rs  lib_owners.rs
tests/common/: mod.rs
