[package]
name = "codeowners"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
bstr = "1.12.1"
clap = { version = "4", features = ["derive"] }
codeowners-rs = "0.1"
gix-quote = "0.7.0"
itertools = "0.14.0"
rayon = "1"
serde = { version = "1.0.228", features = ["derive"] }
tabled = "0.20"

[profile.release]
lto = true

[dev-dependencies]
assert_cmd = "2.2.0"
assert_fs = "1.1.3"
insta = { version = "1.47.0", features = ["yaml"] }
serial_test = "3.4.0"
